# wichtel_loser

./: Cargo.toml  README.md  flake.nix
src/: handlers.rs  main.rs  models.rs  state.rs
templates/: base.html  create.html  error.html  event_created.html  identify.html  index.html  join.html  joined.html  manage.html  view_assignment.html
