[package]
name = "wichtel_loser"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-rt = "2"
actix-session = { version = "0.9", features = ["cookie-session"] }
actix-files = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
tera = "1"
fuzzy-matcher = "0.3"
parking_lot = "0.12"
once_cell = "1"
env_logger = "0.10"
log = "0.4"
